// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlightable renders the item 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable="true"
    data-testid="highlightable-item"
    tabindex="0"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      NO HIGHLIGHT
    </div>
  </div>
</DocumentFragment>
`;

exports[`Highlightable when blurred renders as not highlighted 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable="true"
    data-testid="highlightable-item"
    tabindex="0"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      NO HIGHLIGHT
    </div>
  </div>
</DocumentFragment>
`;

exports[`Highlightable when focused renders as highlighted 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable="true"
    data-focusvisible-polyfill="true"
    data-testid="highlightable-item"
    tabindex="0"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      HIGHLIGHT
    </div>
  </div>
</DocumentFragment>
`;

exports[`Highlightable when hover is enabled when mouse enters renders as highlighted 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable="true"
    data-testid="highlightable-item"
    tabindex="0"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      HIGHLIGHT
    </div>
  </div>
</DocumentFragment>
`;

exports[`Highlightable when hover is enabled when mouse leaves renders as not highlighted 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable="true"
    data-testid="highlightable-item"
    tabindex="0"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      NO HIGHLIGHT
    </div>
  </div>
</DocumentFragment>
`;

exports[`Highlightable when hover is not enabled when mouse enters renders as not highlighted 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable="true"
    data-testid="highlightable-item"
    tabindex="0"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      NO HIGHLIGHT
    </div>
  </div>
</DocumentFragment>
`;

exports[`Highlightable when hover is not enabled when mouse leaves renders as not highlighted 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
    data-focusable="true"
    data-testid="highlightable-item"
    tabindex="0"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      NO HIGHLIGHT
    </div>
  </div>
</DocumentFragment>
`;
